--- a/package.json
+++ b/package.json
@@ -11,17 +11,20 @@
     "cdk": "cdk"
   },
   "devDependencies": {
+    "@types/aws-lambda": "^8.10.110",
     "@types/jest": "^29.4.0",
     "@types/node": "18.13.0",
+    "@types/uuid": "^9.0.0",
+    "aws-cdk": "2.65.0",
+    "aws-sdk": "^2.1318.0",
     "jest": "^29.4.2",
     "ts-jest": "^29.0.5",
-    "aws-cdk": "2.65.0",
     "ts-node": "^10.9.1",
     "typescript": "~4.9.5"
   },
   "dependencies": {
     "aws-cdk-lib": "2.65.0",
-    "constructs": "^10.0.0",
+    "constructs": "^10.1.253",
     "source-map-support": "^0.5.21"
   }
 }
